3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/c_misc.c: ensure you can't harvest items already harvested, or skills and such.
Nicolas Weeger 2007-04-30

server/monster.c: fix bug #1709618: Text message is too long/truncated.
Nicolas Weeger 2007-04-30

Partially implement feature request #1668158: Better nethack implementation.
Random maps now have a new 'multiple_floors' parameter that, if set, will
make the different rooms of the map have different floors.
All floors are still taken from the same floor style, for coherence.
 doc/Developers/random-maps
 random_maps/floor.c reader.l random_map.c random_map.h
Nicolas Weeger 2007-04-29

random_maps/wall.c: walls should always block, even if they sometimes allow
 some movement.
Nicolas Weeger 2007-04-29

server/rune.c: trap's message can be NULL (random maps for instance).
Nicolas Weeger 2007-04-29

Return result of cf_object_move().
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Add 'Crossfire.Object.Move' method.
 plugins/cfpython/cfpython_object.c 
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-29

Give read-only access to map->unique to plugins. Add Crossfire.Map.Unique property.
 include/plugin.h
 plugins/cfpython/include/cfpython_map_private.h
 plugins/cfpython/cfpython_map.c
 server/plugins.c
Nicolas Weeger 2007-04-29

plugins/common/plugin_common.c: wrong param type.
Nicolas Weeger 2007-04-29

plugins/cfanim/cfanim.c: fixed a crash occuring when ghosting a DM. Made the
   Animator work by making it listening to the time event. Fixed the bug that
   left the player invisible after having been ghosted.
   Made the paralyze option of animation files to work.